--- a/Website/index.html
+++ b/Website/index.html
@@ -21,7 +21,8 @@
             <p class="number-item" id="RightNum">1</p>
         </div>
 
-        <button class="spin-button" onclick="GenerateRandomNum()">Spin</button>
+        <!--<button class="spin-button" onclick="GenerateRandomNum()">Spin</button>-->
+        <img class="spin-button" onclick="GenerateRandomNum()" src="Assets/Images/spin.JPG">
 
         <div class="guide">
             <button class="guide-button" onclick="ShowGuide()">Show Guide</button>
