--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slots Machine</title>
-    <link rel="stylesheet" href="/Website/Assets/CSS/main.css">
+    <link rel="stylesheet" href="/Assets/CSS/main.css">
 </head>
 
 <body>
@@ -61,7 +61,7 @@
         <a href="https://github.com/Bear-ium" target="_blank">Bear-ium</a>
     </footer>
 
-    <script src="/Website/Assets/JS/main.js"></script>
+    <script src="/Assets/JS/main.js"></script>
 </body>
 
 </html>
