--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slots Machine</title>
-    <link rel="stylesheet" href="/Assets/CSS/main.css">
-    <script src="/Assets/JS/main.js"></script>
+    <link rel="stylesheet" href="Assets/CSS/main.css">
+    <script src="Assets/JS/main.js"></script>
 </head>
 
 <body>
